Java 1.5 markup for DelegatorInterface and GenericDelegator.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@585845 13f79535-47bb-0310-9956-ffa450edef68